--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.0.1-SNAPSHOT</version>
 
 	<name>spring-security-login-and-registration</name>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
